--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <img src="https://raw.githubusercontent.com/kafi-saki/kafi-saki.github.io/main/img2.png" alt="Preview Image 2" class="feature-img" data-aos="zoom-in" />
     </section>
 
-    <button class="main-btn" onclick="window.location.href='YOUR_MEAL_LOG_LINK_HERE'" data-aos="flip-right">
+    <button class="main-btn" onclick="window.location.href='https://kafi-saki.github.io/meal-log.html'" data-aos="flip-right">
       Try the AI Meal Log
     </button>
   </div>
