--- a/meal-log.html
+++ b/meal-log.html
@@ -92,7 +92,7 @@
   </div>
 
   <footer>
-    Developed by Kafi-Saki<br/>
+    Developed by Saqib Sarwar<br/>
     AI Meal Log | No data is stored.
   </footer>
 
